--- a/index.html
+++ b/index.html
@@ -93,5 +93,22 @@
     <!-- Style CSS -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header-top">
+          <a href="/">
+            <div class="logo">
+              <span class="logo__circle"></span>
+              <span class="logo__text">
+                <span class="logo__branch">shine</span>
+                <span class="logo__branch logo__branch--small">smile</span>
+              </span>
+            </div>
+          </a>
+        </div>
+        <div class="header-bottom"></div>
+      </div>
+    </header>
+  </body>
 </html>
