--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
+    <!-- Header -->
     <header class="header">
       <div class="container">
         <!-- Header top -->
@@ -151,6 +152,7 @@
       </div>
     </header>
     <main style="height: 5000px">
+      <!-- Service -->
       <section class="service">
         <div class="container">
           <h2 class="service__heading section-heading">Our services</h2>
@@ -161,7 +163,7 @@
           <div class="service__row">
             <figure>
               <img
-                src="./assets/img/hero-01.jpg"
+                src="./assets/img/service.jpg"
                 alt="service"
                 class="service_img"
               />
@@ -245,6 +247,61 @@
               </div>
               <a href="#!" class="btn">All Services</a>
             </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Work -->
+      <section class="work">
+        <div class="container">
+          <h2 class="section-heading">How it works</h2>
+          <p class="section-desc work__desc">
+            Exceptional dental care for all ages. Your great smile begins with a
+            great dentist.
+          </p>
+          <div class="work-list">
+            <!-- Work item 1 -->
+            <section class="work-item">
+              <img
+                src="./assets/icons/search.svg"
+                alt=""
+                class="work-item__icon"
+              />
+              <h3 class="work-item__heading">Search doctor</h3>
+              <p class="work-item__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="work-item__more">Learn More</a>
+            </section>
+            <!-- Work item 2-->
+            <section class="work-item">
+              <img
+                src="./assets/icons/search-user.svg"
+                alt=""
+                class="work-item__icon"
+              />
+              <h3 class="work-item__heading">Find best doctor</h3>
+              <p class="work-item__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="work-item__more">Learn More</a>
+            </section>
+            <!-- Work item 3 -->
+            <section class="work-item">
+              <img
+                src="./assets/icons/bag.svg"
+                alt=""
+                class="work-item__icon"
+              />
+              <h3 class="work-item__heading">Get treatment</h3>
+              <p class="work-item__desc">
+                Search a doctor by education, qualifications or
+                experience-contact for inquiry.
+              </p>
+              <a href="#!" class="work-item__more">Learn More</a>
+            </section>
           </div>
         </div>
       </section>
