--- a/index.html
+++ b/index.html
@@ -250,7 +250,6 @@
           </div>
         </div>
       </section>
-
       <!-- Work -->
       <section class="work">
         <div class="container">
@@ -301,6 +300,35 @@
                 experience-contact for inquiry.
               </p>
               <a href="#!" class="work-item__more">Learn More</a>
+            </section>
+          </div>
+        </div>
+      </section>
+      <!-- Feature -->
+      <section class="feature">
+        <div class="container">
+          <div class="feature__inner">
+            <div class="feature__media">
+              <figure class="feature__images">
+                <img
+                  src="./assets/img/hero-01.jpg"
+                  alt="feature_img_01"
+                  class="feature__img"
+                />
+                <img
+                  src="./assets/img/hero-02.jpg"
+                  alt="feature_img_02"
+                  class="feature__img"
+                />
+              </figure>
+            </div>
+            <section class="feature__content">
+              <h2 class="section-heading">Take back your smile with shine.</h2>
+              <p class="section-desc">
+                If you're missing multiple teeth due to decay, injury, or the
+                natural aging process, dentures might be the perfect solution.
+              </p>
+              <a href="#!" class="btn feature__cta">Learn More</a>
             </section>
           </div>
         </div>
